typescript2/pkg-grammar-treesitter/grammar.js
    source_file: ($) => repeat($._declaration),

    _declaration: ($) =>
      choice(
        $.class_declaration,
        $.enum_declaration,
        $.interface_declaration,
        $.implements_for_declaration,
        $.function_declaration,
        $.client_declaration,
        $.generator_declaration,
        $.retry_policy_declaration,
        $.template_string_declaration,
        $.type_alias_declaration,
        $.test_declaration,
        $.testset_declaration,
        $.let_declaration,
        $.empty_statement,
      ),

    // ==========================================================================
    // Class
    // ==========================================================================

    class_declaration: ($) =>
      seq(
        'class',
        field('name', $.identifier),
        optional(field('type_parameters', $.generic_parameters)),
        field('body', $.class_body),
      ),

    class_body: ($) =>
      seq('{', repeat($._class_member), '}'),

    _class_member: ($) =>
      choice(
        $.field_declaration,
        $.function_declaration,
        $.implements_block,
        $.block_attribute,
        $.empty_statement,
      ),

    // `name string`, `name: string`, trailing `,`/`;`, attributes possibly on
    // following lines (the parser is newline-blind here; so are we).
    field_declaration: ($) =>
      prec.right(
        seq(
          field('name', $.identifier),
          optional(':'),
          field('type', $._type),
          repeat($.attribute),
          optional(choice(',', ';')),
        ),
      ),

    // ==========================================================================
    // Enum
    // ==========================================================================

    enum_declaration: ($) =>
      seq('enum', field('name', $.identifier), field('body', $.enum_body)),

    enum_body: ($) =>
      seq(
        '{',
        repeat(choice($.enum_variant, $.block_attribute, $.empty_statement)),
        '}',
      ),

    enum_variant: ($) =>
      prec.right(
        seq(
          field('name', $.identifier),
          repeat($.attribute),
          optional(choice(',', ';')),
        ),
      ),

    // ==========================================================================
    // Interface / implements
    // ==========================================================================

    function_declaration: ($) =>
      prec.right(
        seq(
          'function',
          field('name', $.identifier),
          optional(field('type_parameters', $.generic_parameters)),
          field('parameters', $.parameter_list),
          optional(seq('->', field('return_type', $._type))),
          optional($.throws_clause),
          optional(field('body', $.function_body)),
        ),
      ),

    parameter_list: ($) => seq('(', commaSep($.parameter), ')'),

    parameter: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('default', $._expression))),
      ),

    throws_clause: ($) => seq('throws', field('error', $._type)),

    // A function body is either an LLM body (client/prompt fields) or an
    // expression body (statements). Both can also mix with header comments.
    function_body: ($) =>
      seq(
        '{',
        repeat(choice($.client_field, $.prompt_field, $._statement)),
        '}',
      ),

    // `client GPT4` | `client: Brain,` | `client "openai/gpt-4o"`
    // | `client openai/gpt-4o-mini`
    attribute: ($) =>
      seq(
        '@',
        field('name', $.attribute_name),
        optional(field('arguments', $.attribute_arguments)),
      ),

    block_attribute: ($) =>
      seq(
        '@@',
        field('name', $.attribute_name),
        optional(field('arguments', $.attribute_arguments)),
      ),

    // `description`, `stream.done`, `dynamic` (keyword reused as a name).
    attribute_name: ($) =>
      seq(
        choice($.identifier, alias('dynamic', $.identifier)),
        repeat(seq('.', $.identifier)),
      ),

    attribute_arguments: ($) => seq('(', commaSep($._expression), ')'),

    // ==========================================================================
    // Types
    // ==========================================================================

    _type: ($) =>
      choice(
        $.union_type,
        $.optional_type,
        $.array_type,
        $.type_path,
        $.function_type,
        $.parenthesized_type,
        $.literal_type,
      ),

    union_type: ($) =>
      prec.left(1, seq(field('left', $._type), '|', field('right', $._type))),

    // Postfix suffixes bind tighter than `|`: `int | string[]` is
    // `int | (string[])`. Optional `T?` and array `T[]` may stack.
    array_type: ($) => prec(3, seq(field('type', $._type), '[', ']')),

    // `string`, `User`, `baml.iter.Iterator<Item = string, Error = never>`,
    // `map<string, int>`, `U.CompareError`
    type_path: ($) =>
      prec.right(
        seq(
          $.identifier,
          repeat(seq('.', $.identifier)),
          optional(field('type_arguments', $.type_arguments)),
        ),
      ),

    literal_type: ($) => choice($.string, $.number, $.boolean),

    // ==========================================================================
    // Statements
    // ==========================================================================

    _statement: ($) =>
      choice(
        $.let_declaration,
        $.expression_statement,
        $.while_statement,
        $.for_statement,
        $.defer_statement,
        $.test_declaration,
        $.testset_declaration,
        $.function_declaration,
        $.empty_statement,
      ),

    expression_statement: ($) => prec.right(seq($._expression, optional(';'))),

    // `let x = v;` `const y: int = x;` `watch let z = v;`
    // `const User { name } = user;` `let v: int = value else { return 0; };`
    let_declaration: ($) =>
      prec.right(
        prec.dynamic(
          1,
          seq(
          optional('watch'),
          choice('let', 'const'),
          field('pattern', $._pattern),
            optional(seq('=', field('value', $._expression))),
            optional(field('else', $.else_clause)),
            optional(';'),
          ),
        ),
      ),

    else_clause: ($) => seq('else', field('body', $.block)),

    while_statement: ($) =>
      prec.right(
        seq(
          'while',
          choice(
            field('condition', $._expression),
            seq(
              choice('let', 'const'),
              field('pattern', $._pattern),
              '=',
              field('value', $._expression),
            ),
          ),
          field('body', $.block),
          optional(';'),
        ),
      ),

    for_statement: ($) =>
      prec.right(
        seq(
          'for',
          choice(
            seq('(', $._for_header, ')'),
            $._for_in_header,
          ),
          field('body', $.block),
          optional(';'),
        ),
      ),

    _for_header: ($) => choice($._for_in_header, $._for_c_header),

    _for_in_header: ($) =>
      seq(
        choice('let', 'const'),
        field('pattern', $._pattern),
        'in',
        field('iterable', $._expression),
      ),

    defer_statement: ($) =>
      prec.right(seq('defer', field('body', $.block), optional(';'))),

    // ==========================================================================
    // Expressions
    // ==========================================================================

    _expression: ($) =>
      choice(
        $.identifier,
        $.number,
        $.boolean,
        $.null,
        $.string,
        $.byte_string,
        $.raw_string,
        $.backtick_string,
        $.member_expression,
        $.upcast_expression,
        $.index_expression,
        $.call_expression,
        $.optional_call_expression,
        $.constructor_expression,
        $.parenthesized_expression,
        $.array_expression,
        $.map_expression,
        $.lambda_expression,
        $.block,
        $.if_expression,
        $.match_expression,
        $.catch_expression,
        $.is_expression,
        $.binary_expression,
        $.coalesce_expression,
        $.unary_expression,
        $.assignment_expression,
        $.await_expression,
        $.spawn_expression,
        $.throw_expression,
        $.return_expression,
        $.break_expression,
        $.continue_expression,
        alias($.const_identifier, $.identifier),
      ),

    // The real lexer has no `const` keyword; `let const = x; const` is legal.
    member_expression: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field('object', $._expression),
          field('operator', choice('.', '?.')),
          field('property', alias($.identifier, $.property_identifier)),
        ),
      ),

    // `expr.as<Iface>` — explicit interface upcast (BEP-044).
    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field('function', $._expression),
          optional(field('type_arguments', $.type_arguments)),
          field('arguments', $.arguments),
        ),
      ),

    // `callback?.(42)`
    arguments: ($) => seq('(', commaSep(choice($._expression, $.named_argument)), ')'),

    // `f(limit = 2)`
    constructor_expression: ($) =>
      prec.dynamic(
        1,
        seq(
          field('type', choice($.identifier, $.member_expression)),
          optional(field('type_arguments', $.type_arguments)),
          field('body', $.constructor_body),
        ),
      ),

    constructor_body: ($) =>
      seq('{', commaSep(choice($.constructor_field, $.spread_element)), '}'),

    constructor_field: ($) =>
      seq(
        field('name', alias($.identifier, $.property_identifier)),
        ':',
        field('value', $._expression),
      ),

    parenthesized_expression: ($) => seq('(', $._expression, ')'),

    block: ($) => seq('{', repeat($._statement), '}'),

    // `if (cond) {..} else ..` | `if cond {..}` | `if let p = e {..}` |
    // `if const p: T = e {..}`
    if_expression: ($) =>
      prec.right(
        seq(
          'if',
          choice(
            field('condition', $._expression),
            seq(
              choice('let', 'const'),
              field('pattern', $._pattern),
              '=',
              field('value', $._expression),
            ),
          ),
          field('consequence', $.block),
          optional(seq('else', field('alternative', choice($.block, $.if_expression)))),
        ),
      ),

    match_expression: ($) =>
      seq(
        'match',
        field('value', $._expression),
        field('body', $.match_body),
      ),

    match_body: ($) => seq('{', repeat($.match_arm), '}'),

    match_arm: ($) =>
      prec.right(
        seq(
          field('pattern', $._pattern),
          optional(field('guard', $.match_guard)),
          '=>',
          field('value', $._expression),
          optional(choice(',', ';')),
        ),
      ),

    catch_expression: ($) =>
      prec.left(PREC.CATCH, seq($._expression, $.catch_clause)),

    catch_clause: ($) =>
      seq(
        choice('catch', 'catch_all'),
        optional(
          seq(
            '(',
            field('binding', $.identifier),
            optional(seq(',', field('stack_trace', $.identifier))),
            ')',
          ),
        ),
        '{',
        repeat($.match_arm),
        '}',
      ),

    // `v is int | bool` — Rust matches!-style pattern test. Like the real
    // parser's condition-position rule, the RHS suppresses top-level
    // destructure patterns so `if r is Empty { ... }` keeps the `{` for the
    // then-block (write `(r is Empty { f })` to destructure).
    is_expression: ($) =>
      prec.left(
        PREC.COMPARE,
        seq(field('value', $._expression), 'is', field('pattern', $._is_pattern)),
      ),

    _is_pattern: ($) =>
      choice($._is_pattern_atom, alias($.is_union_pattern, $.union_pattern)),

    binary_expression: ($) => {
      const table = [
        ['||', PREC.OR],
        ['&&', PREC.AND],
        ['|', PREC.BIT_OR],
        ['^', PREC.BIT_XOR],
        ['&', PREC.BIT_AND],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['<', PREC.COMPARE],
        ['>', PREC.COMPARE],
        ['<=', PREC.COMPARE],
        ['>=', PREC.COMPARE],
        ['instanceof', PREC.COMPARE],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MUL],
        ['/', PREC.MUL],
        ['%', PREC.MUL],
      ];
      return choice(
        ...table.map(([op, p]) =>
          prec.left(
            p,
            seq(
              field('left', $._expression),
              field('operator', op),
              field('right', $._expression),
            ),
          ),
        ),
      );
    },

    // `a ?? b` — distinct node (the parser assembles it from two `?` tokens).
    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field('left', $._expression),
          field(
            'operator',
            choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>='),
          ),
          field('right', $._expression),
        ),
      ),

    throw_expression: ($) => prec.right(seq('throw', field('value', $._expression))),

    return_expression: ($) =>
      prec.right(seq('return', optional(field('value', $._expression)))),

    break_expression: (_) => prec.right('break'),

    continue_expression: (_) => prec.right('continue'),

    // ==========================================================================
    // Patterns (let / match arms / catch arms / is)
    //   PATTERN := UNION (':' UNION)*     (chain narrows)
    //   UNION   := ATOM ('|' ATOM)*
    //   ATOM    := 'let' name | '_' | destructure | array | '(' PATTERN ')' | type
    // ==========================================================================

    _pattern: ($) => choice($.chain_pattern, $._pattern_union),

    chain_pattern: ($) =>
      seq($._pattern_union, repeat1(seq(':', $._pattern_union))),

    _pattern_union: ($) => choice($.union_pattern, $._pattern_atom),

    binding_pattern: ($) => seq('let', field('name', choice($.identifier, '_'))),

    wildcard_pattern: (_) => '_',

    // `PatternRecord { id, label: let l }` | `let Envelope { record }` |
    // `name.space.Type { field }`
    destructure_pattern: ($) =>
      seq(
        optional('let'),
        field('type', seq($.identifier, repeat(seq('.', $.identifier)))),
        '{',
        commaSep($.field_pattern),
        '}',
      ),

    field_pattern: ($) =>
      seq(
        field('name', alias($.identifier, $.property_identifier)),
        optional(seq(':', field('pattern', $._pattern))),
      ),

    // `[let first, string, ..let rest]` | `[..]` | `let [let head, ..let tail]`
    array_pattern: ($) =>
      seq(
        optional('let'),
        '[',
        commaSep(choice($._pattern, $.rest_pattern)),
        ']',
      ),

    rest_pattern: ($) => seq('..', optional($._pattern)),

    type_pattern: ($) => choice($._type, $.null),

    // ==========================================================================
    // Terminals
    // ==========================================================================

    identifier: (_) => token(IDENT_REGEX),

    number: (_) =>
      token(
        choice(
          /[0-9]+n/, //                       bigint
          /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/, // float
          /[0-9]+[eE][+-]?[0-9]+/, //          scientific
          /[0-9]+/, //                         integer
        ),
      ),

    string: (_) => token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),

    comment: (_) => token(seq('//', /[^\n]*/)),

    block_comment: (_) => token(seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')),
  },
});
